--- a/src/styles/blocks/brands-slider.scss
+++ b/src/styles/blocks/brands-slider.scss
@@ -1,7 +1,12 @@
 .brands-slider {
-  padding-top: 41px;
-  padding-bottom: 42px;
+  padding-top: 31px;
+  padding-bottom: 32px;
   background-color: $color-red;
+
+  @media (min-width: $tablet) {
+    padding-top: 41px;
+    padding-bottom: 42px;
+  }
 }
 
 .brands-slider__items {
@@ -12,7 +17,7 @@
 .brands-slider__item {
   width: 100%;
   width: 50%;
-  height: 50px;
+  height: 60px;
   flex-grow: 1;
   flex-shrink: 0;
   padding-left: 20px;
@@ -37,7 +42,7 @@
   }
 
   @media (min-width: $desktop-md) {
-    width: calc(100% / 6);
+    width: 16.67%;
   }
 }
 
