--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   font-size: 14px;
-  line-height: 1.3;
+  line-height: 1.72;
   background-color: $color-dark;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .footer__info {
-  padding: 30px 0;
+  padding: 26px 0;
   color: #fff;
   background-color: $color-almost-black;
   text-align: center;
@@ -56,7 +56,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 32px;
+  margin-top: 28px;
   margin-bottom: 0;
 
   @media (min-width: $tablet) {
@@ -81,4 +81,109 @@
       }
     }
   }
+}
+
+.footer__columns {
+  @media (min-width: $tablet) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+.footer__column {
+  @media (min-width: $tablet) {
+    width: calc(50% - 15px);
+  }
+
+  @media (min-width: $desktop-sm) {
+    &_contacts {
+      width: 24%;
+      margin-right: auto;
+    }
+
+    &_menu {
+      width: 20%;
+      padding-right: 20px;
+    }
+
+    &_social {
+      width: 27%;
+      padding-right: 20px;
+    }
+
+    &_working {
+      width: 23%;
+    }
+  }
+}
+
+.footer__logo {
+  margin-bottom: 14px;
+}
+
+.footer__text {
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+
+.footer__title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  padding-top: 20px;
+  font-size: 18px;
+  line-height: 1.67;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.footer__list {
+  list-style: none;
+  margin: 10px 0 25px;
+  padding: 0;
+
+  @media (min-width: $desktop-sm) {
+    &_social {
+      column-count: 2;
+    }
+  }
+}
+
+.footer__list-item {
+  &:not(:last-child) {
+    margin-bottom: 6px;
+  }
+}
+
+.footer__list-link {
+  @include addTransition(color);
+
+  color: inherit;
+  text-decoration: none;
+
+  &:hover {
+    color: #fff;
+  }
+}
+
+.footer__icon-item {
+  display: inline-flex;
+  position: relative;
+  padding-left: 28px;
+  z-index: 1;
+}
+
+.footer__list-icon {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 24px;
+  z-index: -1;
+}
+
+.footer__list-icon svg {
+  fill: $color-red;
 }
