--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -92,6 +92,15 @@
 }
 
 .footer__column {
+  @include resetChildMargins;
+
+  padding-top: 20px;
+  padding-bottom: 25px;
+
+  &:first-child {
+    padding-top: 0;
+  }
+
   @media (min-width: $tablet) {
     width: calc(50% - 15px);
   }
@@ -128,9 +137,8 @@
 }
 
 .footer__title {
-  margin-top: 0;
+  margin-top: 45px;
   margin-bottom: 10px;
-  padding-top: 20px;
   font-size: 18px;
   line-height: 1.67;
   font-weight: 700;
@@ -140,7 +148,7 @@
 
 .footer__list {
   list-style: none;
-  margin: 10px 0 25px;
+  margin: 0;
   padding: 0;
 
   @media (min-width: $desktop-sm) {
