--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -176,7 +176,7 @@
 }
 
 .footer__icon-item {
-  display: inline-flex;
+  display: inline-block;
   position: relative;
   padding-left: 28px;
   z-index: 1;
