--- a/src/styles/blocks/brands-slider.scss
+++ b/src/styles/blocks/brands-slider.scss
@@ -22,11 +22,7 @@
   flex-shrink: 0;
   padding-left: 20px;
   padding-right: 20px;
-  transition: filter 0.2s ease;
-
-  &:hover {
-    filter: brightness(1.1);
-  }
+  outline: none;
 
   @media (min-width: $phone-md) {
     width: 33.3333%;
@@ -43,6 +39,19 @@
 
   @media (min-width: $desktop-md) {
     width: 16.67%;
+  }
+}
+
+.brands-slider__link {
+  @include addTransition(filter);
+
+  display: block;
+  height: 100%;
+  outline: none;
+
+  &[href]:hover,
+  &:focus {
+    filter: brightness(1.2);
   }
 }
 
