--- a/src/styles/blocks/user-menu.scss
+++ b/src/styles/blocks/user-menu.scss
@@ -3,13 +3,14 @@
   flex-wrap: wrap;
   align-items: center;
   list-style: none;
-  width: 100%;
+  margin: 0;
   padding: 0;
 }
 
 .user-menu__item {
   display: flex;
   align-items: center;
+  margin-top: 15px;
 
   &:not(:last-child):after {
     content: "|";
