--- a/src/styles/blocks/user-menu.scss
+++ b/src/styles/blocks/user-menu.scss
@@ -14,7 +14,11 @@
 
   &:not(:last-child):after {
     content: "|";
-    margin: 0 18px;
+    margin: 0 9px;
+
+    @media (min-width: $tablet) {
+      margin: 0 18px;
+    }
   }
 }
 
