--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -28,8 +28,9 @@
 @import "./blocks/user-menu.scss";
 @import "./blocks/search-form.scss";
 @import "./blocks/cart-link.scss";
-@import "./blocks/header.scss";
 @import "./blocks/site-nav.scss";
+@import "./blocks/catalog-nav.scss";
+@import "./blocks/header.scss";
 
 @import "./blocks/aside.scss";
 @import "./blocks/aside-menu.scss";
