--- a/src/styles/scaffolding/scaffolding.scss
+++ b/src/styles/scaffolding/scaffolding.scss
@@ -1,6 +1,5 @@
 html {
   box-sizing: border-box;
-  height: 100%;
 }
 
 *,
@@ -13,6 +12,12 @@ body {
   min-height: 100%;
   min-width: 320px;
   margin: 0;
+  font-size: 15px;
+  line-height: 1.2;
+  font-weight: 400;
+  font-family: "Lato", Arial, Helvetica, sans-serif;
+  color: #3d3d3d;
+  background-color: $color-grey-95;
 }
 
 img {
