--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -1,14 +1,51 @@
 .aside {
-  @media (max-width: $tablet-max) {
-    display: none;
+  @media (min-width: $phone-md) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  @media (min-width: $desktop-sm) {
+    display: block;
   }
 }
 
 .aside__menu {
   margin-top: 0;
   margin-bottom: 30px;
+
+  @media (max-width: $tablet-max) {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0;
+    z-index: 1;
+  }
 }
 
-.aside__block:not(:first-child) {
-  margin-top: 30px;
+.aside__block {
+  &:not(:first-child) {
+    margin-top: 30px;
+  }
+
+  @media (min-width: $phone-md) {
+    width: calc(50% - 15px);
+  }
+
+  @media (min-width: $desktop-sm) {
+    width: auto;
+  }
+
+  &_signup {
+    width: 100%;
+  }
+
+  &_promo {
+    @media (max-width: $desktop-sm) {
+      display: none;
+    }
+  }
 }
