--- a/src/styles/blocks/big-cards.scss
+++ b/src/styles/blocks/big-cards.scss
@@ -1,3 +1,3 @@
-.big-cards_slider:not(.slick-initialized) .big-cards__item:not(:first-child) {
+.big-cards_slider:not(.slick-slider) .big-cards__item:not(:first-child) {
   display: none;
 }
